package pt.hotel.animais.model.enums;

public enum EstadoEstadia {
    EM_CURSO,
    TERMINADA
}
