package pt.hotel.animais.model.enums;

public enum EstadoLimpeza {
    PENDENTE,
    CONCLUIDO
}
